--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ScaleChange_Activity"></activity>
-        <activity android:name=".VolumeChange_Activity" />
+        <activity android:name=".VolumeChange_Activity"></activity>
+        <activity android:name=".ScaleChange_Activity" />
         <activity android:name=".LengthChange_Activity" />
         <activity android:name=".Main2Activity" />
         <activity android:name=".MainActivity">
